Tried to fix Lab 1